Reparación de bugs

--- a/src/app/empleados/lista-empleados/lista-empleados.component.html
+++ b/src/app/empleados/lista-empleados/lista-empleados.component.html
@@ -20,3 +20,10 @@
       </tr>
     </tbody>
   </table>
+  @if (empleados.length === 0) {
+    <div class="sinRegistros">
+        <p>
+            sin registros
+        </p>
+    </div>
+  }
