--- a/src/app/empleados/formulario/formulario.component.html
+++ b/src/app/empleados/formulario/formulario.component.html
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <button type="button" class="btn btn-primary" (click)="registrar()">Enviar</button>
+      <button type="button" class="btn btn-primary" [disabled]="validarFormulario" (click)="registrar()">Agregar</button>
     </form>
   </div>
   
